--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,9 +93,9 @@
     <string name="Symbol_Ñ">Letter_Ñ</string>
     <string name="Sheet_AE">Symbols from A to E</string>
     <string name="Sheet_FJ">Symbols fromt F to J</string>
-    <string name="Sheet_KO">Symbols from K to O</string>
+    <string name="Sheet_KO">Symbols K,L,M,N,O</string>
     <string name="Sheet_PT">Symbols from P to T</string>
-    <string name="Sheet_UZ">Symbols u,v,x,y,z</string>
+    <string name="Sheet_UZ">Symbols U,V,X,Y,Z</string>
     <string name="Sheet_stressed_vowels">Stressed vowels</string>
     <string name="Sheet_PS">Puntuation symbols</string>
     <string name="Sheet_04">Symbols from 0 to 4</string>
@@ -112,6 +112,7 @@
     <string name="Check_Mode">Check mode</string>
     <string name="Working_Mode">Working mode</string>
     <string name="Active_line">Active line</string>
+    <string name="Experiment_setup">Experiment setup</string>
 
 
 </resources>
