Creada pantalla de configuración de experimento "config_exp" y modificada "sheet_ae" como primera pantalla funcional con la anterior. Queda modificar las demás para coordinarlas con "config_exp"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,16 +91,16 @@
     <string name="Symbol_8">Number_8</string>
     <string name="Symbol_9">Number_9</string>
     <string name="Symbol_Ñ">Letter_Ñ</string>
-    <string name="Sheet_AE">Symbols from A to E</string>
-    <string name="Sheet_FJ">Symbols fromt F to J</string>
-    <string name="Sheet_KO">Symbols K,L,M,N,O</string>
-    <string name="Sheet_PT">Symbols from P to T</string>
-    <string name="Sheet_UZ">Symbols U,V,X,Y,Z</string>
+    <string name="Sheet_AE">Symbols A, B, C, D, E</string>
+    <string name="Sheet_FJ">Symbols  F, G, H, I, J</string>
+    <string name="Sheet_KO">Symbols K, L, M, N, O</string>
+    <string name="Sheet_PT">Symbols P, Q, R, S, T</string>
+    <string name="Sheet_UZ">Symbols U, V, X, Y, Z</string>
     <string name="Sheet_stressed_vowels">Stressed vowels</string>
-    <string name="Sheet_PS">Puntuation symbols</string>
+    <string name="Sheet_PS">Symbols Ñ,W,Ü,´.´,´,´</string>
     <string name="Sheet_04">Symbols from 0 to 4</string>
     <string name="Sheet_59">Symbols from 5 to 9</string>
-    <string name="Sheet_Punctuation_Symbol">Punctuation symbols</string>
+    <string name="Sheet_Punctuation_Symbol">Symbols Ñ, W, Ü, ´.´ , ´,´</string>
     <string name="Time_test_learning">Time test learning braille symbols</string>
     <string name="Symbol_Ü">Letter Ü</string>
     <string name="Symbol_.">Symbol .</string>
